fix svg on mobile

--- a/src/modules/CartPage/components/ProductCart/ProductCart.module.scss
+++ b/src/modules/CartPage/components/ProductCart/ProductCart.module.scss
@@ -70,6 +70,7 @@
   border: none;
   text-align: center;
   align-self: center;
+  padding: 0;
   height: 1.6rem;
   width: 1.6rem;
 
